# postgresql-to-rapidpro-sync

./: .dockerignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: build.yaml  test.yaml
src/sync/: cli.py  config.py  query.py  rapidpro.py
tests/: conftest.py  test_cli.py  test_config.py  test_query.py  test_rapidpro.py
