[tool.poetry]
name = "postgresql-to-rapidpro-sync"
version = "0.0.1"
description = "Sync database table to rapidpro contact fields"
authors = ["Praekelt.org <dev@praekelt.org>"]
license = "BSD 3-Clause"
readme = "README.md"
packages = [
    { include = "sync", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
psycopg = {extras = ["c"], version = "^3.0.14"}

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
mypy = "^0.950"
flake8 = "^4.0.1"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-asyncio = "^0.18.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
preview = true

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=src"
